# nude-man

./: .gitignore  .gitpod.yml  README.rst  nude_man.code-workspace  pyproject.toml
.gitlab/issue_templates/: bug.md  dev_gc-ce.md  dev_gc-non-ce.md  dev_task.md
nude_man/: __init__.py
nude_man/conf/: example.conf
nude_man/lib/config/: __init__.py  args.py  environment.py
nude_man/lib/errors/: __init__.py
nude_man/lib/errors/api/: __init__.py
nude_man/lib/helpers/: debug.py
scripts/: nude-man
tests/: test_nude_man.py
